output/onyxprotocol_p5_25_124/foundry_validation/F-001_Direct_underlying_donations_can_inflate/forge_stdout_attempt1.log
Compiler run failed:
Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0xA43fe16908251ee70EF74718545e4FE6C5cCEc9f". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0xA43fe16908251ee70EF74718545e4FE6C5cCEc9f". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
  --> src/FlawVerifier.sol:47:28:
   |
47 |         IUniswapV2PairLike(0xA43fE16908251ee70EF74718545e4FE6C5cCEc9f);
   |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

